--- a/build.gradle
+++ b/build.gradle
@@ -18,24 +18,23 @@ repositories.whenObjectAdded {
 //declare a build task
 task build
 
-//declare a task to create a zip of the app
-task zip(type: Zip) {
-	from ('.') {
-		include "*"
-		include "bin/**"
-		include "data/**"
-		include "node_modules/**"
-		include "public/**"
-		include "routes/**"
-		include "views/**"
-	}
-	destinationDir(file("dist"))
-	baseName "trainSchedule"
+
+task task1 {
+    doLast {
+        println 'Task 1 executed!'
+    }
 }
 
+task task2 {
+    dependsOn task1
+    doLast {
+        println 'Task 2 executed!'
+    }
+}
+
+
 //declare task dependencies
-build.dependsOn zip
-zip.dependsOn npm_build
 npm_build.dependsOn npm_test
 npm_test.dependsOn npmInstall
 npm_build.dependsOn npmInstall
+build.dependsOn task2
